force-app/main/default/objects/NI_Project_Backlog_Tasks__c/NI_Project_Backlog_Tasks__c.object-meta.xml
<CustomObject>
    <label>NI Project Backlog Task</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Task</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NI Project Backlog Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>