force-app/main/default/objects/NI_Project_Backlog_Tasks__c/fields/Allow_Custom_Task_Name__c.field-meta.xml
<CustomField>
    <fullName>Allow_Custom_Task_Name__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Salesforce.com Change Request: NICC-016642</description>
    <inlineHelpText>Override the standard naming convention for the name of the Task</inlineHelpText>
    <label>Allow Custom Task Name</label>
    <type>Checkbox</type>
</CustomField>