force-app/main/default/objects/NI_Project_Backlog_Tasks__c/fields/Committed__c.field-meta.xml
<CustomField>
    <fullName>Committed__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Project Backlog Task: https://na4.salesforce.com/aEQ600000004CE3</description>
    <label>Committed</label>
    <type>Checkbox</type>
</CustomField>