force-app/main/default/objects/NI_Project_Backlog_Tasks__c/fields/Current_Sprint__c.field-meta.xml
<CustomField>
    <fullName>Current_Sprint__c</fullName>
    <description>If today&apos;s date is part of the current Sprint, this value is set to &quot;Yes&quot;</description>
    <formula>IF(AND(TODAY()&gt;= Sprint_Start_Date__c, TODAY()&lt;= Sprint_Completion_Date__c ), &quot;Yes&quot;, &quot;No&quot;)</formula>
    <inlineHelpText>If today&apos;s date is part of the current Sprint, this value is set to &quot;Yes&quot;</inlineHelpText>
    <label>Current Sprint</label>
    <type>Text</type>
</CustomField>