force-app/main/default/objects/NI_Project_Backlog_Tasks__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <description>Details of the Project Backlog Task</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Details of the Project Backlog Task</inlineHelpText>
    <label>Details</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>