force-app/main/default/objects/NI_Project_Backlog_Tasks__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <defaultValue>TODAY() + 14</defaultValue>
    <description>NICC-027852</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>