force-app/main/default/objects/NI_Project_Backlog_Tasks__c/fields/Hours__c.field-meta.xml
<CustomField>
    <fullName>Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Actual Hours</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>