force-app/main/default/objects/NI_Project_Backlog_Tasks__c/fields/NI_Project_Backlog_Item__c.field-meta.xml
<CustomField>
    <fullName>NI_Project_Backlog_Item__c</fullName>
    <inlineHelpText>Backlog Item this task is related to</inlineHelpText>
    <label>Project</label>
    <referenceTo>NI_Project_Backlog__c</referenceTo>
    <relationshipLabel>NI Project Backlog Tasks</relationshipLabel>
    <relationshipName>NI_Project_Backlog_Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>