force-app/main/default/objects/NI_Project_Backlog_Tasks__c/fields/Percent_Complete__c.field-meta.xml
<CustomField>
    <fullName>Percent_Complete__c</fullName>
    <description>Salesforce.com Change Request: NICC-016586

Actual Hours divided by Actual Hours plus Hours Remaining</description>
    <formula>/*
IF(ISPICKVAL(Status__c,&quot;Completed&quot;), 100, 
 IF(Hours__c = 0, 0, Hours__c / (Hours__c + Hours_Remaining__c)
    )
   )
*/

IF(Hours__c = 0,0,Hours__c / (Hours__c + Hours_Remaining__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Actual Hours divided by Actual Hours plus Hours Remaining</inlineHelpText>
    <label>% Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>