force-app/main/default/objects/NI_Project_Backlog_Tasks__c/fields/Project_Phase__c.field-meta.xml
<CustomField>
    <fullName>Project_Phase__c</fullName>
    <description>updated from NICC-029811</description>
    <inlineHelpText>Phase of the project that the specified hours were expended in.  Note: Use the &quot;Initiation&quot; phase to track time spent during &quot;discovery&quot; or high level scoping/requirements gathering prior to the project officially becoming &quot;active&quot; or &quot;In Progress&quot;.</inlineHelpText>
    <label>Project Phase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Initial Discovery</fullName>
            </value>
            <value>
                <fullName>Requirements Gathering</fullName>
            </value>
            <value>
                <fullName>Solution Design</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
                <default>true</default>
                <label>Development</label>
            </value>
            <value>
                <fullName>Development Validation</fullName>
            </value>
            <value>
                <fullName>Code Review</fullName>
            </value>
            <value>
                <fullName>SBFULL Deployment</fullName>
            </value>
            <value>
                <fullName>SBFULL Business Systems Validation</fullName>
            </value>
            <value>
                <fullName>SBFULL Stakeholder Validation</fullName>
            </value>
            <value>
                <fullName>QA Validation</fullName>
            </value>
            <value>
                <fullName>UAT Deployment</fullName>
            </value>
            <value>
                <fullName>UAT Validation</fullName>
            </value>
            <value>
                <fullName>Production Deployment</fullName>
            </value>
            <value>
                <fullName>Production Validation</fullName>
            </value>
            <value>
                <fullName>Documentation_Training</fullName>
                <label>Documentation/Training</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>