force-app/main/default/objects/NI_Project_Backlog_Tasks__c/fields/Project_Status__c.field-meta.xml
<CustomField>
    <fullName>Project_Status__c</fullName>
    <description>Added this for List Views</description>
    <formula>TEXT(NI_Project_Backlog_Item__r.Request_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Status</label>
    <type>Text</type>
</CustomField>