force-app/main/default/objects/NI_Project_Backlog_Tasks__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Created for Security &amp; Compliance team.  NICC-027852</description>
    <inlineHelpText>Clarification of selected Status.</inlineHelpText>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dependency</fullName>
            </value>
            <value>
                <fullName>Deprioritized</fullName>
            </value>
            <value>
                <fullName>Underestimated</fullName>
            </value>
            <value>
                <fullName>Unplanned Time-Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>