force-app/main/default/objects/NI_Project_Backlog_Tasks__c/fields/Sprint__c.field-meta.xml
<CustomField>
    <fullName>Sprint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Salesforce.com Change Request: NICC-010897

The Sprint that this Project Backlog Task is related to</description>
    <inlineHelpText>The Sprint that this Project Backlog Task is related to</inlineHelpText>
    <label>Sprint</label>
    <referenceTo>NI_Sprint__c</referenceTo>
    <relationshipLabel>NI Project Backlog Tasks</relationshipLabel>
    <relationshipName>NI_Project_Backlog_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>