force-app/main/default/objects/NI_Project_Backlog_Tasks__c/fields/Sprint_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Completion_Date__c</fullName>
    <description>The date the Sprint ended</description>
    <formula>Sprint__r.Sprint_Completion_Date__c</formula>
    <inlineHelpText>The date the Sprint ended</inlineHelpText>
    <label>Sprint Completion Date</label>
    <type>Date</type>
</CustomField>