force-app/main/default/objects/NI_Project_Backlog_Tasks__c/fields/Sprint_Name__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Name__c</fullName>
    <description>The name of the Sprint</description>
    <formula>Sprint__r.Name__c</formula>
    <inlineHelpText>The name of the Sprint</inlineHelpText>
    <label>Sprint Name</label>
    <type>Text</type>
</CustomField>