force-app/main/default/objects/NI_Project_Backlog_Tasks__c/fields/Sprint_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Start_Date__c</fullName>
    <description>The date the Sprint started</description>
    <formula>Sprint__r.Sprint_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The date the Sprint started</inlineHelpText>
    <label>Sprint Start Date</label>
    <type>Date</type>
</CustomField>