force-app/main/default/objects/NI_Project_Backlog_Tasks__c/fields/Task_Estimate_hrs__c.field-meta.xml
<CustomField>
    <fullName>Task_Estimate_hrs__c</fullName>
    <inlineHelpText>Number of hours (not duration) estimated to complete this task at time of task creation.</inlineHelpText>
    <label>Estimated Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>