force-app/main/default/objects/NI_Project_Backlog_Tasks__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <description>Salesforce.com Change Request:  NICC-016575

Displays the Team of the related Project</description>
    <formula>TEXT( NI_Project_Backlog_Item__r.Project_Type__c )</formula>
    <inlineHelpText>The Team of the related Project Backlog record</inlineHelpText>
    <label>Team</label>
    <type>Text</type>
</CustomField>