force-app/main/default/objects/NI_Project_Backlog_Tasks__c/recordTypes/Business_Systems_Task.recordType-meta.xml
<RecordType>
    <fullName>Business_Systems_Task</fullName>
    <active>true</active>
    <description>NICC-028375. &amp; 029173 Created for Business Systems use.</description>
    <label>Business Systems Task</label>
</RecordType>