force-app/main/default/objects/NI_Project_Backlog_Tasks__c/recordTypes/Commercial_Operation_Tasks.recordType-meta.xml
<RecordType>
    <fullName>Commercial_Operation_Tasks</fullName>
    <active>true</active>
    <label>Process Improvement Task</label>
</RecordType>