force-app/main/default/objects/NI_Project_Backlog_Tasks__c/recordTypes/Deveopment_Request.recordType-meta.xml
<RecordType>
    <fullName>Deveopment_Request</fullName>
    <active>true</active>
    <label>Deveopment Request</label>
</RecordType>