force-app/main/default/objects/NI_Project_Backlog_Tasks__c/recordTypes/Finance_Project_Tasks.recordType-meta.xml
<RecordType>
    <fullName>Finance_Project_Tasks</fullName>
    <active>true</active>
    <description>Used for Finance Project Tasks</description>
    <label>Finance Project Tasks</label>
</RecordType>