force-app/main/default/objects/NI_Project_Backlog_Tasks__c/recordTypes/IT_Project_Task.recordType-meta.xml
<RecordType>
    <fullName>IT_Project_Task</fullName>
    <active>true</active>
    <description>Used for IT Project Tasks</description>
    <label>IT Project Task</label>
</RecordType>