force-app/main/default/objects/NI_Project_Backlog_Tasks__c/recordTypes/Marketing_Project_Task.recordType-meta.xml
<RecordType>
    <fullName>Marketing_Project_Task</fullName>
    <active>true</active>
    <description>Used for Marketing Project Tasks</description>
    <label>Marketing Project Task</label>
</RecordType>