force-app/main/default/objects/NI_Project_Backlog_Tasks__c/recordTypes/Security_Project_Task.recordType-meta.xml
<RecordType>
    <fullName>Security_Project_Task</fullName>
    <active>true</active>
    <description>NICC-020793</description>
    <label>Security Project Task</label>
</RecordType>