force-app/main/default/objects/NI_Project_Backlog_Tasks__c/validationRules/Actual_Hours_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Actual_Hours_Required</fullName>
    <active>true</active>
    <description>Cannot mark a Task Complete until Actual Hours have been updated.</description>
    <errorConditionFormula>AND( ISNULL(Hours__c),  ISPICKVAL(Status__c, &quot;Completed&quot;) )</errorConditionFormula>
    <errorDisplayField>Hours__c</errorDisplayField>
    <errorMessage>The Status cannot be set to &quot;Completed&quot; until Actual Hours have been entered.</errorMessage>
</ValidationRule>