force-app/main/default/objects/NI_Project_Backlog_Tasks__c/validationRules/Negative_Remaining_LOE.validationRule-meta.xml
<ValidationRule>
    <fullName>Negative_Remaining_LOE</fullName>
    <active>false</active>
    <description>Remaining LOE cannot be negative.</description>
    <errorConditionFormula>AND (NOT(ISPICKVAL(Status__c, &quot;Completed&quot;)), 
  OR( Hours_Remaining__c &lt; 0,
    AND( NOT(LOE_Override__c), 
         Task_Estimate_hrs__c - Hours__c &lt; 0
) ) )</errorConditionFormula>
    <errorDisplayField>LOE_Override__c</errorDisplayField>
    <errorMessage>Hours Remaining cannot be less than zero.  If Actual LOE exceeds Estimated LOE, then check &quot;LOE Override&quot; and manually enter the Remaining LOE.</errorMessage>
</ValidationRule>