force-app/main/default/objects/NI_Project_Backlog_Tasks__c/validationRules/Phase_Picklist_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Phase_Picklist_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Project_Phase__c,&quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Project_Phase__c</errorDisplayField>
    <errorMessage>You must select a Phase for this task.</errorMessage>
</ValidationRule>