force-app/main/default/objects/NI_Project_Backlog_Tasks__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NI_Project_Backlog_Item__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Sprint__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Committed__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Date_Completed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>