force-app/main/default/objects/NI_Project_Backlog_Tasks__c/listViews/BS_Current_Sprint_Commited.listView-meta.xml
<ListView>
    <fullName>BS_Current_Sprint_Commited</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
    <columns>Sprint__c</columns>
    <columns>NI_Project_Backlog_Item__c</columns>
    <columns>NAME</columns>
    <columns>Assigned_To__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Percent_Complete__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>NI_Project_Backlog_Tasks__c.IT_Project_Task,NI_Project_Backlog_Tasks__c.Business_Systems_Task</value>
    </filters>
    <filters>
        <field>Team__c</field>
        <operation>equals</operation>
        <value>Business Systems</value>
    </filters>
    <filters>
        <field>Committed__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Current_Sprint__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <label>Business Systems - CS - Committed</label>
    <sharedTo>
        <group>Business_Systems_Internal</group>
    </sharedTo>
</ListView>