force-app/main/default/objects/NI_Project_Backlog_Tasks__c/listViews/BS_Next_Sprint.listView-meta.xml
<ListView>
    <fullName>BS_Next_Sprint</fullName>
    <booleanFilter>1 AND 2 AND (3 OR 4) AND 5</booleanFilter>
    <columns>Sprint__c</columns>
    <columns>NI_Project_Backlog_Item__c</columns>
    <columns>NAME</columns>
    <columns>Assigned_To__c</columns>
    <columns>Committed__c</columns>
    <columns>Percent_Complete__c</columns>
    <columns>Status__c</columns>
    <columns>Sprint_Start_Date__c</columns>
    <columns>Sprint_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>NI_Project_Backlog_Tasks__c.Business_Systems_Task</value>
    </filters>
    <filters>
        <field>Team__c</field>
        <operation>equals</operation>
        <value>Business Systems</value>
    </filters>
    <filters>
        <field>Sprint_Start_Date__c</field>
        <operation>greaterThan</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Sprint__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Assigned_To__c</field>
        <operation>notContain</operation>
        <value>Jeff,Mary,Lisa,Pete,Heather</value>
    </filters>
    <label>Business Systems - Future Sprints</label>
    <sharedTo>
        <group>Business_Systems_Internal</group>
    </sharedTo>
</ListView>