force-app/main/default/objects/NI_Project_Backlog_Tasks__c/listViews/BS_Not_Started.listView-meta.xml
<ListView>
    <fullName>BS_Not_Started</fullName>
    <columns>Sprint__c</columns>
    <columns>NI_Project_Backlog_Item__c</columns>
    <columns>NAME</columns>
    <columns>Assigned_To__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Committed__c</columns>
    <columns>Percent_Complete__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Team__c</field>
        <operation>equals</operation>
        <value>Business Systems</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Not Started</value>
    </filters>
    <label>Business Systems - Not Started</label>
    <sharedTo>
        <group>Business_Systems_Internal</group>
    </sharedTo>
</ListView>