force-app/main/default/objects/NI_Project_Backlog_Tasks__c/listViews/BS_Previous_Sprint_Commited.listView-meta.xml
<ListView>
    <fullName>BS_Previous_Sprint_Commited</fullName>
    <columns>Sprint__c</columns>
    <columns>NI_Project_Backlog_Item__c</columns>
    <columns>NAME</columns>
    <columns>Assigned_To__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Committed__c</columns>
    <columns>Percent_Complete__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Team__c</field>
        <operation>contains</operation>
        <value>Business Systems</value>
    </filters>
    <filters>
        <field>Committed__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Sprint_Completion_Date__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Sprint_Completion_Date__c</field>
        <operation>greaterThan</operation>
        <value>N_WEEKS_AGO:2</value>
    </filters>
    <label>Business Systems - PS - Committed</label>
    <sharedTo>
        <group>Business_Systems_Internal</group>
    </sharedTo>
</ListView>