force-app/main/default/objects/NI_Project_Backlog_Tasks__c/listViews/Business_Systems_Current_Sprint.listView-meta.xml
<ListView>
    <fullName>Business_Systems_Current_Sprint</fullName>
    <columns>Sprint__c</columns>
    <columns>NI_Project_Backlog_Item__c</columns>
    <columns>NAME</columns>
    <columns>Assigned_To__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Committed__c</columns>
    <columns>Percent_Complete__c</columns>
    <columns>Status__c</columns>
    <columns>Sprint_Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>NI_Project_Backlog_Tasks__c.Business_Systems_Task</value>
    </filters>
    <filters>
        <field>Team__c</field>
        <operation>equals</operation>
        <value>Business Systems</value>
    </filters>
    <filters>
        <field>Sprint_Start_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Sprint_Completion_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Assigned_To__c</field>
        <operation>notContain</operation>
        <value>,Mary,Jeff,Lisa,Pete,Heather,Shashikant</value>
    </filters>
    <label>Business Systems - Current Sprint</label>
</ListView>