force-app/main/default/objects/NI_Project_Backlog_Tasks__c/listViews/Business_Systems_TC.listView-meta.xml
<ListView>
    <fullName>Business_Systems_TC</fullName>
    <columns>NAME</columns>
    <columns>Assigned_To__c</columns>
    <columns>NI_Project_Backlog_Item__c</columns>
    <columns>Sprint__c</columns>
    <columns>Sprint_Start_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Project_Status__c</columns>
    <columns>Project_Phase__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assigned_To__c</field>
        <operation>contains</operation>
        <value>Sean,Praneeth,Keerthi,Sagar,Mayank,Nikhil,Svitlana,Anitha,Chukwuka,Pradeep,Geetha,Abhay,Nitish,Anand,Pankaj,Shashikant,Bhagwat</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>NI_Project_Backlog_Tasks__c.Business_Systems_Task</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notContain</operation>
        <value>Completed,Deferred,Neglected,No Longer Applicable</value>
    </filters>
    <label>Business Systems - TC</label>
</ListView>