force-app/main/default/objects/NI_Project_Backlog_Tasks__c/listViews/Compliance_Current_Sprint.listView-meta.xml
<ListView>
    <fullName>Compliance_Current_Sprint</fullName>
    <columns>Assigned_To__c</columns>
    <columns>Committed__c</columns>
    <columns>NAME</columns>
    <columns>NI_Project_Backlog_Item__c</columns>
    <columns>Status__c</columns>
    <columns>Task_Estimate_hrs__c</columns>
    <columns>Hours__c</columns>
    <columns>Hours_Remaining__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Date_Completed__c</columns>
    <columns>Details__c</columns>
    <columns>Sprint__c</columns>
    <columns>Sprint_Completion_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Current_Sprint__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>NI_Project_Backlog_Tasks__c.IT_Project_Task</value>
    </filters>
    <filters>
        <field>Team__c</field>
        <operation>equals</operation>
        <value>Compliance</value>
    </filters>
    <label>Compliance - Current Sprint</label>
</ListView>