force-app/main/default/objects/NI_Project_Backlog_Tasks__c/listViews/Cybage_Completed_Development_Tasks.listView-meta.xml
<ListView>
    <fullName>Cybage_Completed_Development_Tasks</fullName>
    <columns>Sprint__c</columns>
    <columns>NI_Project_Backlog_Item__c</columns>
    <columns>NAME</columns>
    <columns>Assigned_To__c</columns>
    <columns>Committed__c</columns>
    <columns>Percent_Complete__c</columns>
    <columns>Status__c</columns>
    <columns>Date_Completed__c</columns>
    <columns>Hours__c</columns>
    <columns>Hours_Remaining__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>NI_Project_Backlog_Tasks__c.IT_Project_Task,NI_Project_Backlog_Tasks__c.Business_Systems_Task</value>
    </filters>
    <filters>
        <field>Corporate_Group__c</field>
        <operation>equals</operation>
        <value>Cybage</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>Cybage - Complete</label>
    <sharedTo>
        <group>Business_Systems_Internal</group>
        <group>Offshore_Development_IT</group>
    </sharedTo>
</ListView>