force-app/main/default/objects/NI_Project_Backlog_Tasks__c/listViews/Security_Current_Sprint1.listView-meta.xml
<ListView>
    <fullName>Security_Current_Sprint1</fullName>
    <columns>Assigned_To__c</columns>
    <columns>NAME</columns>
    <columns>NI_Project_Backlog_Item__c</columns>
    <columns>Status__c</columns>
    <columns>Hours__c</columns>
    <columns>Sprint__c</columns>
    <columns>Sprint_Completion_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Current_Sprint__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <filters>
        <field>Team__c</field>
        <operation>equals</operation>
        <value>Security</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>NI_Project_Backlog_Tasks__c.Security_Project_Task</value>
    </filters>
    <label>Security - Current Sprint</label>
</ListView>